<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearlayout_0102"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
           
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
	        android:orientation="vertical" >
		    <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:contentDescription="@string/ntpbm_0102_img01"
		        android:src="@drawable/heartplus2" />
		</LinearLayout>
	    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
	        android:orientation="vertical" >
		    
            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
			    <TextView
			        android:id="@+id/serverTxtNm01"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="10dp"
			        android:text="@string/servertxtnm01"
			        style="@style/text15dp_1" />
			
			    <TextView
			        android:id="@+id/serverTxtNm02"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" />
		    </LinearLayout>
		    
            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/serverTxtNm03"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="10dp"
			        android:text="@string/servertxtnm03"
			        style="@style/text15dp_1" />
			
			    <TextView
			        android:id="@+id/serverTxtNm04"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" />
		    </LinearLayout>
		    
            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/serverTxtNm05"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="10dp"
			        android:text="@string/servertxtnm05"
			        style="@style/text15dp_1" />
			
			    <TextView
			        android:id="@+id/serverTxtNm06"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" />
		    </LinearLayout>
		    
            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
			    <TextView
			        android:id="@+id/serverTxtNm07"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="10dp"
			        android:text="@string/servertxtnm07"
			        style="@style/text15dp_1" />
			
			    <TextView
			        android:id="@+id/serverTxtNm08"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" />
		    </LinearLayout>
		</LinearLayout>
	</LinearLayout>
		
    <LinearLayout
        android:layout_below="@id/linearlayout_0102"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
           
        <TextView
	        android:id="@+id/ntpbm_0102_txt_nm01"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm01"
	        style="@style/textTitle20dp_3" />
	
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm02"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm03"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm03"
	        style="@style/textTitle20dp_3" />
	
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm04"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm05"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm05"
	        style="@style/textTitle20dp_3" />
	
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm06"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm07"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm07"
	        style="@style/textTitle20dp_3" />
	
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm08"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm09"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm09"
	        style="@style/textTitle20dp_3" />
	
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm10"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm11"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm11"
	        style="@style/textTitle20dp_3" />
	
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm12"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm13"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm13"
	        style="@style/textTitle20dp_3" />
	
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm14"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm15"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ntpbm_0102_txt_nm15"
	        style="@style/textTitle20dp_3" />
    
	    <TextView
	        android:id="@+id/ntpbm_0102_txt_nm16"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:padding="5dip" />
	    
    </LinearLayout>
	
</RelativeLayout>
</ScrollView>
