<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <GridView android:id="@+id/photoGridView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:verticalSpacing="10dp"
		android:horizontalSpacing="10dp"
		android:numColumns="auto_fit"
		android:columnWidth="100dp"
		android:stretchMode="columnWidth"
		android:gravity="center"
		></GridView>
 
    <LinearLayout android:id="@+id/btnLinearLay00"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/photoGridView"
	    android:orientation="horizontal" >
	    <Button
			android:id="@+id/ntpbm_0105_btn01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:layout_marginRight="3dp"
			android:text="@string/ntpbm_0105_btn01"
			android:onClick="addPhoto"
			style="@style/btnStyleBeige" />
	
		<Button
			android:id="@+id/ntpbm_0105_btn02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:layout_marginLeft="3dp"
			android:text="@string/ntpbm_0105_btn02"
			android:onClick="delPhoto"
			style="@style/btnStyleBeige" />
  
	</LinearLayout>

    <ImageView 
        android:id="@+id/ntpbm_0105_imgview"
        android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_margin="10dip"
	    android:layout_below="@id/btnLinearLay00"
	    android:layout_centerVertical="true"
	    android:layout_centerHorizontal="true"
	    android:contentDescription="@string/image" />

</RelativeLayout>
